# rayport

./: .gitignore  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  build.conf.example  dev_server.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: 01-wasm-base.md  02-project-packager.md  03-game-loop.md  04-html-shell.md  05-dev-server.md  07-runtime-launcher.md  08-project-config.md  README.md  architecture.md
docs/history/: poc-log.md
documentation/: 01-wasm-base.md  02-project-packager.md  03-game-loop.md  04-html-shell.md  05-dev-server.md  06-asset-optimizer.md  07-runtime-launcher.md  08-project-config.md  README.md  architecture.md
documentation/history/: poc-log.md
examples/breakout/: main.py  rayport.toml
plan/: 01-wasm-base.md  02-project-packager.md  03-code-transformer.md  04-html-shell.md  05-dev-server.md  06-asset-optimizer.md  07-runtime-launcher.md  README.md  poc-log.md
runtime/: README.md  main.data  main.js  python.data  python.js
src/rayport/: cli.py  config.py  dependencies.py  dev_server.py  html_generator.py  optimizer.py  output.py  packager.py  runtime_files.py
src/rayport/runtime/: README.md
src/rayport/templates/: index.html  index_fixed.html
stubs/: ffi_type_stubs.c  game.html  gen_cffi.py  launcher.py  test_game.py  web_stubs.c
tests/: browser_smoke.py  check_distributions.py  test_cli.py  test_config.py  test_html_generator.py  test_output.py  test_packager.py  test_runtime_files.py
third_party_licenses/: SQLite.txt  libffi-arm.txt  libffi-main.txt  raylib-external.txt
